--- a/style.css
+++ b/style.css
@@ -1012,5 +1012,9 @@ hr {
         /* max-height: 61vh; */
         width: 79vw;
     }
-
+    .project-card:hover {
+        transform: translateY(-8px);
+        /* box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15); */
+        box-shadow: 0px 12px 30px 0px rgba(255, 0, 255, 0.7);
+    }
 }
