--- a/style.css
+++ b/style.css
@@ -341,21 +341,20 @@ body {
 }
 
 .project-card {
-    background-color: black;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border: 1px solid #b8b4af;
-    /* max-height: 61vh; */
-    width: 23vw;
+  background-color: black;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  transition: transform 0.1s ease-in-out, box-shadow 0.1s ease;
+  border: 1px solid #b8b4af;
+  width: 23vw;
 }
 
 .project-card:hover {
-    transform: translateY(-8px);
-    /* box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15); */
-    box-shadow: 0px 12px 30px 0px rgba(255, 0, 255, 0.7);
+  transform: translate3d(0, -13px, 0) !important;
+  box-shadow: 0px 12px 30px 0px rgba(255, 0, 255, 0.7);
 }
+
 
 .project-card img {
     width: 100%;
