first letter change

--- a/style.css
+++ b/style.css
@@ -977,6 +977,7 @@ hr {
 
     .rightAbout .skills h3 {
         margin-bottom: 20px;
+        color: magenta;
     }
 
     .rightAbout .education {
