--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ body {
     box-shadow: 0 12px 35px rgba(255, 0, 255, 0.25);
 }
 
-
 /* About Start */
 .about {
     width: 100%;
@@ -929,8 +928,9 @@ hr {
         border: 3px solid rgba(255, 255, 255, 0.08);
         box-shadow: 0px 0px 8px 25px rgba(255, 0, 255, 0.15);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
+        z-index: 56;
     }
-
+    
     .about {
         display: flex;
         flex-direction: column-reverse;
@@ -999,7 +999,7 @@ hr {
     .rightAbout .skills {
         font-size: 4vw;
         display: block;
-        height: 39vh;
+        height: auto;
         /* transition: 0.5s all; */
     }
 
@@ -1010,7 +1010,7 @@ hr {
 
     .rightAbout .education {
         font-size: 4vw;
-        height: 44vh;
+        height: auto;
         /* transition: 0.2s all; */
     }
 
